<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.sdsu.cs646.lakshmi.assignment4.PostReportsActivity"
    android:background="#8bb7f6">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:onClick="back"
        android:id="@+id/button5"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>



    <Button android:id="@+id/button1"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/TakePhoto"
            android:onClick="dispatchTakePictureIntent"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"/>

    <ImageView
        android:id="@+id/imageviewPhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="3dip"
        android:scaleType="fitXY"
        android:src="@drawable/camera"
        android:layout_below="@+id/button5"
        android:layout_above="@+id/editText_desc"/>


    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SubmitReport"
        android:id="@+id/buttonSubmit"
        android:layout_below="@+id/editText_desc"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"/>


    <EditText
        android:id="@+id/editText_desc"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Enter_description_here"
        android:maxLength="300"
        android:layout_above="@+id/button1"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="35dp"
        android:allowUndo="true"
        android:textColor="#915858"/>



</RelativeLayout>
