<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.sdsu.cs646.lakshmi.assignment4.MainActivity"
    android:background="#a48ceb">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/viewReports"
            android:id="@+id/button_viewReports"
            android:layout_column="12"
            android:onClick="ViewReports"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            android:background="@drawable/buttonshape"
            android:shadowColor="#A8A8A8"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mapView"
            android:onClick="mapView"
            android:id="@+id/button_mapView"
            android:layout_column="18"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            android:background="@drawable/buttonshape"
            android:shadowColor="#A8A8A8"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:layout_marginBottom="70dp"
            android:layout_alignParentBottom="true"
            android:layout_alignLeft="@+id/button_view"
            android:layout_alignStart="@+id/button_view"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/postReport"
            android:onClick="postReport"
            android:layout_column="15"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            android:background="@drawable/buttonshape"
            android:shadowColor="#A8A8A8"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:id="@+id/button_view"
            android:layout_below="@+id/button_viewReports"
            android:layout_alignLeft="@+id/button_viewReports"
            android:layout_alignStart="@+id/button_viewReports"
            android:layout_marginTop="88dp"/>

</RelativeLayout>